Not supported on mobile and minor css fixes
The page displays an error message when opened on a viewport width smaller then 1000px.

Added correct font.

--- a/src/css/weather.css
+++ b/src/css/weather.css
@@ -15,7 +15,7 @@
     width: 480px;
 }
 
-.text:hover {
+.button-hover:hover {
     box-shadow: 0px 0px 8px #6590FD;
     transform: scale(1.01);
     border-radius: 4px;
@@ -37,7 +37,7 @@
     outline: none;
     background-color: #6590FD;
     font-family: 'M PLUS Rounded 1c', sans-serif;
-    font-weight: bold;
+    font-weight: 700;
     border: none;
     color: white;
     height: 50px;
@@ -57,6 +57,7 @@
     font-size: 16px;
     opacity: 0.98;
     margin-top: 8px;
+    font-weight: 700;
 }
 
 .weather-input {
@@ -67,6 +68,7 @@
     border-top: none;
     border-left: none;
     border-right: none;
+    font-weight: 700;
 }
 
 .weather-input:focus {
@@ -78,6 +80,7 @@
 
 .weather-input:focus + .weather-label {
     visibility: visible;
+    font-weight: 700;
     opacity: 0.38;
 }
 
@@ -87,6 +90,7 @@
 
 ::placeholder {
     opacity: 0.38;
+    font-weight: 700;
 }
 
 .icon {
@@ -114,11 +118,16 @@
     height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    border: solid green 1px;
+    font-weight: 500;
 }
 
 .weather-video {
     border: solid red 3px;
+}
+
+.weather-video-name {
+    font-size: 48px;
+    font-weight: 800;
 }
 
 .weather-value, .weather-location {
@@ -136,9 +145,10 @@
 .weather-location-time {
     opacity: 0.38;
     font-size: 12px;
+    font-weight: 700;
 }
 
 .weather-location-name {
-    font-weight: bold;
+    font-weight: 700;
     font-size: 32px;
 }
